@@ -1,0 +1,13 @@
+#tb 0: 1/8
+#media_type 0: video
+#codec_id 0: rawvideo
+#dimensions 0: 160x120
+#sar 0: 1/1
+0,          0,          0,        1,    28800, 0xb3725302
+0,          1,          1,        1,    28800, 0xf9612057
+0,          2,          2,        1,    28800, 0x9b207db0
+0,          3,          3,        1,    28800, 0x1331c2d5
+0,          4,          4,        1,    28800, 0x2edf3ee4
+0,          5,          5,        1,    28800, 0x84105711
+0,          6,          6,        1,    28800, 0xa7a35f25
+0,          7,          7,        1,    28800, 0xa9c49677
