@@ -70,6 +70,7 @@ version <next>:
 - NotchLC decoder
 - gradients source video filter
 - MediaFoundation encoder wrapper
+- untile filter
 
 
 version 4.2:
